crates/rlf-macros/tests/fail/empty_parens.rs
use rlf::rlf;

rlf! {
    name() = "x";
}

fn main() {}
