crates/rlf-macros/tests/fail/empty_parens.stderr
error: empty parameter list — use a term instead (remove the parentheses)
 --> tests/fail/empty_parens.rs:4:9
  |
4 |     name() = "x";
  |         ^^
